--- a/superiorwikium/.godot/editor/editor_layout.cfg
+++ b/superiorwikium/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://RememberCells.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://performance_review.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,15 +28,15 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://RememberCells.tscn", "res://main.tscn", "res://game_manager.tscn", "res://hud.tscn", "res://SceneHead.tscn", "res://Settings.tscn", "res://remember_cells_grid.tscn", "res://performance_review.tscn", "res://submarine_settings.tscn")
 current_scene="res://main.tscn"
 center_split_offset=-288
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 
 [ScriptEditor]
 
 open_scripts=["res://back_ground.gd", "res://DataBase.gd", "res://game_manager.gd", "res://game_mod_manager.gd", "res://GridMatrix.gd", "res://hud.gd", "res://input_indicator.gd", "res://main.gd", "res://noise.gd", "res://performance_review.gd", "res://remember_cells.gd", "res://Settings.gd", "res://Submarine.gd", "res://Submarines/SubmarineSprite.gd", "res://submarine_settings.gd"]
-selected_script="res://main.gd"
-open_help=["CanvasItem", "FileAccess", "InputEvent", "RefCounted", "Time", "ZIPPacker"]
+selected_script="res://GridMatrix.gd"
+open_help=["\"main.gd\"", "CanvasItem", "FileAccess", "InputEvent", "RefCounted", "Time", "ZIPPacker"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
