--- a/superiorwikium/.godot/global_script_class_cache.cfg
+++ b/superiorwikium/.godot/global_script_class_cache.cfg
@@ -1,4 +1,10 @@
 list=Array[Dictionary]([{
+"base": &"Node",
+"class": &"GameManager",
+"icon": "",
+"language": &"GDScript",
+"path": "res://game_manager.gd"
+}, {
 "base": &"Control",
 "class": &"Settings",
 "icon": "",
