--- a/superiorwikium/.godot/editor/editor_layout.cfg
+++ b/superiorwikium/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://new_card.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://new_card.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,17 +25,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://RememberCells.tscn", "res://main.tscn", "res://Submarine_game_manager.tscn", "res://hud.tscn", "res://card_manager.tscn", "res://game_manager.tscn", "res://compare_cards.tscn")
-current_scene="res://compare_cards.tscn"
+open_scenes=PackedStringArray("res://RememberCells.tscn", "res://Submarine.tscn", "res://Submarine_game_manager.tscn", "res://hud.tscn", "res://card_manager.tscn", "res://game_manager.tscn", "res://compare_cards.tscn", "res://new_card.tscn")
+current_scene="res://card_manager.tscn"
 center_split_offset=-269
-selected_bottom_panel_item=1
-selected_default_debugger_tab_idx=1
+selected_bottom_panel_item=0
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 
 [ScriptEditor]
 
 open_scripts=["res://back_ground.gd", "res://card_manager.gd", "res://card_settings.gd", "res://DataBase.gd", "res://game_manager.gd", "res://game_mod_manager.gd", "res://GridMatrix.gd", "res://hud.gd", "res://input_indicator.gd", "res://main.gd", "res://noise.gd", "res://performance_review.gd", "res://remember_cells.gd", "res://Settings.gd", "res://Submarine.gd", "res://Submarines/SubmarineSprite.gd", "res://Submarine_game_manager.gd", "res://submarine_settings.gd", "res://new_card.gd"]
-selected_script="res://input_indicator.gd"
+selected_script="res://new_card.gd"
 open_help=["@GlobalScope", "CanvasItem", "Expression", "FileAccess", "GraphEdit", "InputEvent", "JavaScriptBridge", "Node", "Object", "ProjectSettings", "RefCounted", "SceneTree", "String", "Time", "ZIPPacker"]
 script_split_offset=70
 list_split_offset=0
