Multiple changes (forgot to commit); mixed mode for week3 updated

--- a/superiorwikium/.godot/editor/editor_layout.cfg
+++ b/superiorwikium/.godot/editor/editor_layout.cfg
@@ -17,26 +17,26 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://DataBase.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://Submarines/submarine.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Submarines/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://RememberCells.tscn", "res://Submarine.tscn", "res://compare_cards.tscn", "res://new_card.tscn", "res://Submarine_game_manager.tscn", "res://hud.tscn", "res://card_manager.tscn", "res://game_manager.tscn")
-current_scene="res://compare_cards.tscn"
-center_split_offset=-269
+open_scenes=PackedStringArray("res://RememberCells.tscn", "res://Submarine.tscn", "res://compare_cards.tscn", "res://main_menu.tscn", "res://new_card.tscn", "res://Submarine_game_manager.tscn", "res://hud.tscn", "res://card_manager.tscn", "res://game_manager.tscn", "res://SceneHead.tscn", "res://remember_cells_grid.tscn", "res://Settings.tscn", "res://submarine_settings.tscn", "res://Submarines/submarine.tscn")
+current_scene="res://Submarines/submarine.tscn"
+center_split_offset=-273
 selected_bottom_panel_item=0
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://back_ground.gd", "res://card_manager.gd", "res://card_settings.gd", "res://DataBase.gd", "res://game_manager.gd", "res://game_mod_manager.gd", "res://GridMatrix.gd", "res://hud.gd", "res://input_indicator.gd", "res://main.gd", "res://new_card.gd", "res://noise.gd", "res://performance_review.gd", "res://remember_cells.gd", "res://Settings.gd", "res://Submarine.gd", "res://Submarines/SubmarineSprite.gd", "res://Submarine_game_manager.gd", "res://submarine_settings.gd", "res://TouchButton.gd"]
-selected_script="res://DataBase.gd"
-open_help=["@GlobalScope", "CanvasItem", "Control", "Expression", "FileAccess", "GraphEdit", "InputEvent", "InputEventAction", "InputEventScreenTouch", "JavaScriptBridge", "Node", "Object", "ProjectSettings", "RefCounted", "SceneTree", "String", "Time", "TouchScreenButton", "ZIPPacker"]
+open_scripts=["res://back_ground.gd", "res://card_manager.gd", "res://card_settings.gd", "res://ChoosingTrainerButton.gd", "res://DataBase.gd", "res://game_manager.gd", "res://game_mod_manager.gd", "res://GridMatrix.gd", "res://hud.gd", "res://input_indicator.gd", "res://main.gd", "res://main_menu.gd", "res://new_card.gd", "res://noise.gd", "res://performance_review.gd", "res://RedSubmarine.gd", "res://remember_cells.gd", "res://Settings.gd", "res://Submarine.gd", "res://Submarines/SubmarineSprite.gd", "res://Submarine_game_manager.gd", "res://submarine_settings.gd", "res://TouchButton.gd"]
+selected_script="res://Submarines/SubmarineSprite.gd"
+open_help=["@GlobalScope", "Button", "Callable", "CanvasItem", "Control", "Expression", "FileAccess", "GraphEdit", "HBoxContainer", "InputEvent", "InputEventAction", "InputEventScreenTouch", "JavaScriptBridge", "LinkButton", "Node", "Object", "OS", "ProjectSettings", "RefCounted", "RichTextLabel", "SceneTree", "String", "Time", "TouchScreenButton", "ZIPPacker"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
