--- a/superiorwikium/.godot/editor/script_editor_cache.cfg
+++ b/superiorwikium/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 55,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 24,
-"scroll_position": 1.0,
+"row": 8,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 57,
+"column": 51,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 14,
-"scroll_position": 0.0,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,11 +45,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 46,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 45,
-"scroll_position": 32.0,
+"row": 0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -59,10 +59,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 44,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
+"row": 13,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -73,11 +73,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 45,
+"column": 51,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 45,
-"scroll_position": 37.0,
+"row": 4,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -115,16 +115,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 35,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 58,
-"scroll_position": 43.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 57,
-"selection_to_column": 35,
-"selection_to_line": 58,
+"row": 54,
+"scroll_position": 47.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -133,16 +129,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 44,
-"scroll_position": 39.6667,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 44,
-"selection_to_column": 1,
-"selection_to_line": 76,
+"row": 45,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -151,10 +143,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 43,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 4,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -179,11 +171,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 39,
+"column": 27,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 20,
-"row": 58,
-"scroll_position": 59.0,
+"h_scroll_position": 0,
+"row": 72,
+"scroll_position": 65.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -193,11 +185,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 80,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 40,
-"scroll_position": 0.0,
+"row": 50,
+"scroll_position": 36.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -207,11 +199,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 36,
-"scroll_position": 30.0,
+"row": 5,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -221,10 +213,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 11,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -235,11 +227,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 43,
+"column": 9,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 36,
-"scroll_position": 24.0,
+"row": 16,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -249,11 +241,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 8,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 40,
-"scroll_position": 28.0,
+"row": 9,
+"scroll_position": 12.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -277,10 +269,52 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
+"column": 27,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 6,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://ChoosingTrainerButton.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
+"row": 1,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://main_menu.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
 "row": 4,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://RedSubmarine.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 16,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
